--- a/src/apps/spanelske-vety.yaml
+++ b/src/apps/spanelske-vety.yaml
@@ -176,7 +176,7 @@ gustar1:
 gustarnext1:
 - {CZ: cestování, SP: viajar}
 - {CZ: Španělsko, SP: España}
-- {CZ: el libro, SP: ta kniha}
+- {CZ: ta kniha, SP: el libro}
 - {CZ: čtení, SP: leer}
 - {CZ: sport, SP: eldeporte}
 - {CZ: jim, SP: les}
