--- a/src/apps/spanelske-vety.yaml
+++ b/src/apps/spanelske-vety.yaml
@@ -25,7 +25,7 @@ be2:
  - {CZ: Vy jste (muži), SP: vosotros estáis}
  - {CZ: Oni jsou, SP: éllos están}
  - {CZ: Ony jsou, SP: éllas están}
- - {CZ: Vy jste (vykání,množné), SP: ustedes están}
+ - {CZ: Vy jste (vykání - množné), SP: ustedes están}
 
 vivir:
 - {CZ: Já žiju, SP: yo vivo}
