data added, mistakes corrected

--- a/src/apps/spanelske-vety.yaml
+++ b/src/apps/spanelske-vety.yaml
@@ -179,7 +179,7 @@ gustarnext1:
 - {CZ: tuto knihu, SP: este libro}
 - {CZ: čtení, SP: leer}
 - {CZ: sport, SP: eldeporte}
-- {CZ: hudbu, SP: la músika}
+- {CZ: hudbu, SP: la música}
 
 
 templates:
