--- a/src/templates/header.1.html.template
+++ b/src/templates/header.1.html.template
@@ -15,6 +15,6 @@
 </head>
 <body>
   <div id="header">
-    <a href="/"><img id="logo" src="/images/lektorkavpraze.png" alt="=MŠ=" /></a>
+    <a href="/"><img id="logo" src="/images/lektorkavpraze.svg" alt="=MŠ=" /></a>
     <div id="menu">
       <ul>
