hide quote while refreshing (fix typo)

--- a/src/templates/quote.html.template
+++ b/src/templates/quote.html.template
@@ -15,7 +15,7 @@ function getQuote() {
       if (id !== prev_id || id === 0) {
         document.getElementById('quotetext').innerText = myArr[1].replace(/&nbsp;/g, String.fromCharCode(160));
         document.getElementById('quoteauthor').innerText = "\n— " + myArr[2];
-        idocument.getElementById('quote').style.display = "table-cell";
+        document.getElementById('quote').style.display = "table-cell";
       } else {
         getQuote();
       }
