typo corrected "nearest"

--- a/src/apps/anglictina-predmentne-vety.yaml
+++ b/src/apps/anglictina-predmentne-vety.yaml
@@ -16,7 +16,7 @@ object clauses:
   - {CZ: co ona chce, EN: what she wants}
   - {CZ: kde to je, EN: where it is}
   - {CZ: kde je banka, EN: where the bank is}
-  - {CZ: kde je nejbližší restaurace, EN: where the earest restaurant is}
+  - {CZ: kde je nejbližší restaurace, EN: where the nearest restaurant is}
   - {CZ: kdy přijdeš, EN: when you will come}
   - {CZ: jestli to ona má, EN: if she has it}
   - {CZ: jestli přijde v čas, EN: if she will come in time}
