--- a/src/apps/spanelske-vety.yaml
+++ b/src/apps/spanelske-vety.yaml
@@ -300,7 +300,7 @@ bebernext:
 gustarnext1:
 - {CZ: cestování, SP: viajar}
 - {CZ: Španělsko, SP: España}
-- {CZ: ta kniha, SP: el libro}
+- {CZ: Německo, SP: Alemania}
 - {CZ: čtení, SP: leer}
 - {CZ: sport, SP: el deporte}
 
